Added stylesheets and about page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+
     <title>Web Intro</title>
+
 </head>
+
 <body>
-    <h1>Web Intro</h1>
+
+    <header>
+        <nav>
+            <ul>
+                <li><strong>Web Intro</strong></li>
+            </ul>
+
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="examples.html">Examples</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="hero">
+            <h1>Web Intro</h1>
+        </section>
+
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus soluta delectus tempora magnam reiciendis dolorem deleniti, quia eos enim porro minus voluptas numquam dicta ex ad ipsam, rem, laudantium explicabo.</p>
+        </section>
+
+    </main>
+
+    <footer>
+        <small>&copy; | Lachlan Hunt | 27,622 BC</small>
+    </footer>
 </body>
 </html>
