--- a/examples.html
+++ b/examples.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Web Intro</title>
+    <title>Web Intro | Examples</title>
 
 </head>
 
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <ul>
-                <li><strong>Web Intro</strong></li>
+                <li><strong>Web Intro | Examples</strong></li>
             </ul>
 
             <ul>
@@ -29,14 +29,31 @@
     </header>
 
     <main>
-        <section id="hero">
-            <h1>Web Intro</h1>
+        <section id="task1" class="demo">
+            <h2>Basic FlexBox</h2>
+            
+            <div>
+                <p>A</p>
+                <p>B</p>
+                <p>C</p>
+                <p>D</p>
+                <p>E</p>
+                <p>F</p>
+            </div>
         </section>
 
-        <section>
-            <p>A</p>
+        <section id="task2" class="demo">
+            <h2>Basic FlexBox</h2>
+            
+            <div>
+                <p>A</p>
+                <p>B</p>
+                <p>C</p>
+                <p>D</p>
+                <p>E</p>
+                <p>F</p>
+            </div>
         </section>
-
     </main>
 
     <footer>
