Added more Flexbox Examples

--- a/about.html
+++ b/about.html
@@ -40,19 +40,19 @@
                     <header><h3>Cheese</h3></header>
                     <img src="images/cheese.jpg" alt="Image of Cheese">
                     <p>E</p>
-                    <footer>Find out more <a>here</a></footer>
+                    <footer>Find out more <a href="https://en.wikipedia.org/wiki/Cheese">here</a></footer>
                 </article>
                 <article>
                     <header><h3>Element 92</h3></header>
                     <img src="images/uranium.jpg" alt="Image of Uranium element">
                     <p>Yum.</p>
-                    <footer>Find out more <a>here</a></footer>
+                    <footer>Find out more <a href="https://en.wikipedia.org/wiki/Uranium">here</a></footer>
                 </article>
                 <article>
                     <header><h3>Water</h3></header>
                     <img src="images/water.jpg" alt="Image of Water">
                     <p>Yum.</p>
-                    <footer>Find out more <a>here</a></footer>
+                    <footer>Find out more <a href="https://en.wikipedia.org/wiki/Water">here</a></footer>
                 </article>
             </div>
         </section>
